chore(acc): Fix jumpyness between loading and loaded state

--- a/src/renderer/account/components/TransactionsPanel/TransactionsLoading/TransactionsLoading.scss
+++ b/src/renderer/account/components/TransactionsPanel/TransactionsLoading/TransactionsLoading.scss
@@ -1,3 +1,5 @@
 .transactionsLoading {
   padding: 20px;
+  max-width: 316px;
+  width: 100%;
 }
